--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,4 @@
-body, html, .home-container {
+body, html, .kanban-container {
   height: 100%;
   min-height: 100%;
   margin:0;
@@ -6,14 +6,14 @@ body, html, .home-container {
   white-space: nowrap;
 }
 
-.home-container .content {
+.kanban-container .content {
   padding: 80px 16px 16px 16px;
   box-sizing: border-box;
   height: 100%;
   z-index: 1;
 }
 
-.home-container .content .card {
+.kanban-container .content .card {
   margin: 5px 0px;
 }
 
@@ -100,9 +100,10 @@ html.swal2-shown:not(.swal2-no-backdrop):not(.swal2-toast-shown), body.swal2-sho
     margin: auto;
   }
 
-  .home-container {
+  .kanban-container {
     white-space: initial;
     resize: vertical;
     overflow: auto;
   }
 }
+
